Added some news at asio server

--- a/asioserver/asioserver.cbp
+++ b/asioserver/asioserver.cbp
@@ -32,7 +32,13 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="chat_message.h" />
+		<Unit filename="include/MD5.cpp" />
+		<Unit filename="include/MD5.h" />
+		<Unit filename="include/sqlite3.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="include/sqlite3.h" />
+		<Unit filename="include/sqlite_orm.h" />
 		<Unit filename="main.cpp" />
 		<Extensions />
 	</Project>
