--- a/CLICalendarServer/CLICalendarServer.cbp
+++ b/CLICalendarServer/CLICalendarServer.cbp
@@ -13,6 +13,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="src" />
+					<Add directory="./" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +24,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="src" />
+					<Add directory="./" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -32,6 +36,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Task.cpp" />
+		<Unit filename="Task.h" />
 		<Unit filename="include/MD5.cpp" />
 		<Unit filename="include/MD5.h" />
 		<Unit filename="include/sqlite3.c">
@@ -40,6 +46,13 @@
 		<Unit filename="include/sqlite3.h" />
 		<Unit filename="include/sqlite_orm.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Deal.cpp" />
+		<Unit filename="src/Deal.h" />
+		<Unit filename="src/Important.cpp" />
+		<Unit filename="src/Important.h" />
+		<Unit filename="src/SEPARATOR.h" />
+		<Unit filename="src/split.cpp" />
+		<Unit filename="src/split.h" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
