--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /CLICalendarServer/CLICalendarServer.cbp
 /CLICalendarServer/CLICalendarServer.depend
 /CLICalendarServer/CLICalendarServer.layout
+
+.git/*
